# Switch2SplatViewer

./: CMakeLists.txt  README.md
asserts/: test_cube.ply
src/: Camera.cpp  Camera.h  GaussianData.h  MainWindow.cpp  MainWindow.h  PlyLoader.cpp  PlyLoader.h  SplattingWidget.cpp  SplattingWidget.h  main.cpp
